# EE319H-Final-Project-Simulation

./: .gitignore  Audio.cpp  Audio.h  CMakeLists.txt  Flash.cpp  Flash.h  ILI9341.cpp  ILI9341.h  LCD.cpp  LCD.h  README.md  SD.cpp  SD.h  SDCard.cpp  SDCard.h  SRAM.cpp  SRAM.h  UART.cpp  UART.h  WinScreen.cpp  animator.cpp  animator.h  charactermenu.cpp  charactermenu.h  collider.cpp  collider.h  colors.h  colors_finaldest.h  colors_menu.h  colors_misc.h  colors_valvano.h  controller.cpp  controller.h  entities.cpp  entities.h  gameandwatch.cpp  kirby.cpp  main.cpp  menu.cpp  menu.h  (+9 more)
data/: data.txt  shell.py  stage notes.txt
data/sprites/: battl.txt  charmenu.txt  eer.txt  finaldest.txt  gameandwatch.txt  greg.txt  kirby.txt  menu.txt  metadata.txt  misc.txt  smenu.txt  smvl.txt  towerback.txt  valvano.txt  w1gw.txt  w1gwc.txt  w1va.txt  w2kb.txt  w2va.txt
data/sprites/SpriteParser/: GIFParser.py  PNGParser.py  backgroundColors.h  charmenu.txt  colors.h  colors.txt  colors_battlefield.h  colors_charmenu.h  colors_fdst.h  colors_misc.h  colors_stagemenu.h  colors_tower.h  colors_valvano.h  fdst.txt  finaldest.txt  gameandwatch.txt  kirby.txt  menu.txt  misc.txt  stagemenu.txt  title.txt  towerback.txt  valvano.txt  w1kb.txt  w1kbc.txt  w1vac.txt  w2gw.txt  w2gwc.txt  w2kbc.txt  w2vac.txt
data/sprites/SpriteParser/src/: Main.java
data/sprites/gameandwatch/piskel/: bair.piskel  crouch.piskel  dair.piskel  dash.piskel  dashatk.piskel  djump.piskel  downb.piskel  downbproj.piskel  dsmash.piskel  dtilt.piskel  fair.piskel  fall.piskel  fsmash.piskel  ftilt.piskel  hurt.piskel  jump.piskel  ledge.piskel  nair.piskel  neuatk.piskel  neub.piskel  neubproj.piskel  rest.piskel  shield.piskel  sideb.piskel  sidebnum.piskel  stun.piskel  uair.piskel  upb.piskel  upbfall.piskel  usmash.piskel  utilt.piskel  walk.piskel
data/sprites/kirby/: kirby_parsed_sprites.txt
data/sprites/kirby/gif/: Back_AirP.piskel  Down_SmashP.piskel  animation_list.txt
data/sprites/kirby/piskel/: Crouching.piskel  Dash - Copy.piskel  Dash.piskel  Falling_JumpsAvailable.piskel  Falling_NoJumpsAvailable.piskel  FirstJump.piskel  Forward_AirP.piskel  Forward_AttackP.piskel  Forward_SmashP.piskel  Forward_SpecialP.piskel  MultiJump.piskel  Neutral_AirP.piskel  Resting.piskel  Slow.piskel  SlowStop.piskel  Up_AttackP.piskel  Walk.piskel  dashatk.piskel  downair.piskel  downspec.piskel  downtilt.piskel  fair.piskel  firstjmp.piskel  fsmash.piskel  ftilt.piskel  (+22 more)
data/sprites/menu/: Smash Menu.psd
(+69 files in other folders)
